ingress_vs_load-balancer/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
