ingress_vs_load-balancer/service.yaml
# This will create a service named api-server in the cluster. This service is bound to any pod running the application api-app,
# regardless of how many of those pods exist or where they are running.
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  selector:
    app: api-app
  ports:
    - port: 80 # port which Service publish externally
      protocol: TCP
      targetPort: 8080 # port which application in Pod is accepted requests
